[gd_scene load_steps=2 format=3 uid="uid://3o7sndlbeg4n"]

[ext_resource type="Script" path="res://scripts/level_edit_menu.gd" id="1_fqfc3"]

[node name="LevelEditMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fqfc3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.227451)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Share" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Copies level data to clipboard so you can share it with other people."
text = "Copy Level Data"

[node name="Edit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
text = "Edit"

[node name="Delete" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "Delete"

[node name="Cancel" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"

[connection signal="pressed" from="Panel/Share" to="." method="_on_share_pressed"]
[connection signal="pressed" from="Panel/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Panel/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_cancel_pressed"]
